# raytracing-weekend

./: Cargo.toml
assets/: aspe.ppm  default.ppm  fast.ppm  mmm.ppm  test.ppm
assets/antialiasing/: smooth.ppm
assets/camera/: blurry.ppm  final.ppm  rotated.ppm
assets/diffuse/: correct-lambertian.ppm  diffuse-first.ppm  gamma-corrected.ppm  no-acne.ppm
assets/gradients/: dark-blue-grad.ppm  green-white-grad.ppm  horizontal.ppm
assets/reflection/: 3.ppm  fuzzy-metal.ppm
assets/refraction/: glass-ball.ppm  inner-ball.ppm  mittel-glass.ppm  refraction.ppm
assets/sphere/: normal.ppm  red-small.ppm
src/: camera.rs  color.rs  lib.rs  main.rs  math.rs  output.rs  pixel.rs  settings.rs  utils.rs
src/math/: mod.rs  ray.rs  vec3.rs
src/rendering/: mod.rs
src/rendering/entity/: hit.rs  mod.rs  sphere.rs
src/rendering/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/scene/: mod.rs
src/scene/entity/: hit.rs  mod.rs  sphere.rs
src/scene/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/utils/: mod.rs  progress.rs
src/writer/: mod.rs  ppm.rs
