[package]
name = "raytracing_weekend"
version = "0.1.0"
authors = ["martingrzzler <martin.gressler@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"
threadpool = "1.8.1"